@@ -1,3 +1,4 @@
+2/27/14 add 'off scale' to strings file
 2/27/14 increase y-spacing in pH meter, so that picker isn't so close to expand/collapse button
 2/27/14 restrict size of 'off scale' label for i18n, so that the label fits inside the arrow
 2/27/14 remove option to have linear scale with no arrow at the top, decided to always show the arrow
